.metadata/.plugins/org.eclipse.cdt.ui/Test_04_Intrrupt.build.log
15:26:37 **** Incremental Build of configuration Debug for project Test_04_Intrrupt ****
make -j24 all 
arm-none-eabi-gcc "C:/Users/user/source/repos/STM32/MyLib/myLib.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/myLib.d" -MT"Core/Src/myLib.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/myLib.o"
C:/Users/user/source/repos/STM32/MyLib/myLib.c:9:8: error: unknown type name 'UART_HandleTypeDef'
    9 | extern UART_HandleTypeDef huart2;
      |        ^~~~~~~~~~~~~~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c: In function 'ProgramStart':
C:/Users/user/source/repos/STM32/MyLib/myLib.c:18:9: warning: implicit declaration of function 'cls' [-Wimplicit-function-declaration]
   18 |         cls();
      |         ^~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:19:9: warning: implicit declaration of function 'Cursor' [-Wimplicit-function-declaration]
   19 |         Cursor(0,0);
      |         ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:20:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   20 |         printf("Program Name - %s\r\n", str);
      |         ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:8:1: note: include '<stdio.h>' or provide a declaration of 'printf'
    7 | #include "main.h"
  +++ |+#include <stdio.h>
    8 | 
C:/Users/user/source/repos/STM32/MyLib/myLib.c:20:9: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   20 |         printf("Program Name - %s\r\n", str);
      |         ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:20:9: note: include '<stdio.h>' or provide a declaration of 'printf'
C:/Users/user/source/repos/STM32/MyLib/myLib.c: At top level:
C:/Users/user/source/repos/STM32/MyLib/myLib.c:26:6: warning: conflicting types for 'cls'; have 'void()'
   26 | void cls()
      |      ^~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:18:9: note: previous implicit declaration of 'cls' with type 'void()'
   18 |         cls();
      |         ^~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c: In function 'cls':
C:/Users/user/source/repos/STM32/MyLib/myLib.c:29:9: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   29 |         printf("\033[2J");
      |         ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:29:9: note: include '<stdio.h>' or provide a declaration of 'printf'
C:/Users/user/source/repos/STM32/MyLib/myLib.c: At top level:
C:/Users/user/source/repos/STM32/MyLib/myLib.c:31:6: warning: conflicting types for 'Cursor'; have 'void(int,  int)'
   31 | void Cursor(int x, int y)
      |      ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:19:9: note: previous implicit declaration of 'Cursor' with type 'void(int,  int)'
   19 |         Cursor(0,0);
      |         ^~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c: In function 'Cursor':
C:/Users/user/source/repos/STM32/MyLib/myLib.c:34:9: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
   34 |         sprintf(buf,"\033[%d;%dH",y,x);
      |         ^~~~~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:34:9: note: include '<stdio.h>' or provide a declaration of 'sprintf'
C:/Users/user/source/repos/STM32/MyLib/myLib.c:34:9: warning: incompatible implicit declaration of built-in function 'sprintf' [-Wbuiltin-declaration-mismatch]
C:/Users/user/source/repos/STM32/MyLib/myLib.c:34:9: note: include '<stdio.h>' or provide a declaration of 'sprintf'
C:/Users/user/source/repos/STM32/MyLib/myLib.c:36:9: warning: implicit declaration of function 'puts' [-Wimplicit-function-declaration]
   36 |         puts(buf);
      |         ^~~~
C:/Users/user/source/repos/STM32/MyLib/myLib.c:36:9: note: include '<stdio.h>' or provide a declaration of 'puts'
C:/Users/user/source/repos/STM32/MyLib/myLib.c: In function '__io_putchar':
C:/Users/user/source/repos/STM32/MyLib/myLib.c:41:9: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   41 |         HAL_UART_Transmit(&huart2, &ch , 1, 10);
      |         ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:39: Core/Src/myLib.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.

15:26:38 Build Failed. 2 errors, 11 warnings. (took 294ms)

